--- a/intro_exiobase/intro_exiobase_sv.ipynb
+++ b/intro_exiobase/intro_exiobase_sv.ipynb
@@ -23,7 +23,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
@@ -66,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -74,10 +73,10 @@
    },
    "outputs": [],
    "source": [
-    "A = None # A matrix\n",
+    "A = None  # A matrix\n",
     "Y = None  # Y matrix\n",
     "F = None  # impacts matrix\n",
-    "F_hh = None # impacts for FD matrix"
+    "F_hh = None  # impacts for FD matrix"
    ]
   },
   {
@@ -96,10 +95,24 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "units = None\n",
+    "units"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
     }
    },
    "source": [
@@ -110,7 +123,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "outputs": [],
    "source": [
     "# First we collect all labels from A\n",
@@ -128,7 +145,7 @@
    },
    "outputs": [],
    "source": [
-    "# .to_frame() to turn the collected labels into a dataframe\n",
+    "# .to_frame to turn the collected labels into a dataframe\n",
     "A_labels = None\n",
     "A_labels"
    ]
@@ -189,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -197,9 +214,10 @@
    },
    "outputs": [],
    "source": [
+    "#Collect the sectors labels and get the u\n",
     "sectors_labels = None\n",
     "\n",
-    "# Print the sectoral labels\n",
+    "# Print your labels to analyse them (remember .to_frame)\n",
     "sectors_labels"
    ]
   },
@@ -235,7 +253,6 @@
    },
    "outputs": [],
    "source": [
-    "\n",
     "I = None # A.shape[0] is the total number of columns in the A matrix\n",
     "L = None"
    ]
@@ -300,15 +317,34 @@
    },
    "outputs": [],
    "source": [
-    "# we make a copy of our product output vector\n",
-    "x_ = None\n",
+    "# we make a copy of our product output vector which we will call x_inv\n",
+    "x_inv = None\n",
     "\n",
     "# we divide 1 by the values that are non-0\n",
-    "\n",
-    "\n",
-    "# We diagolize the resulting vector\n",
-    "inv_diag_x = None \n",
-    "\n",
+    "x_inv[x_inv!=0] = 1/x_inv[x_inv!=0]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "We calculate our intensities (i.e., extension coefficients)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [],
+   "source": [
     "# We are essentially dividing the total extension by the product output\n",
     "# This gives us coefficients of extension by unit of output (e.g., kg/euro)\n",
     "f = None\n",
@@ -421,7 +457,8 @@
    },
    "outputs": [],
    "source": [
-    "Y.iloc[: , start_NL:end_NL]"
+    "Y_mod = None\n",
+    "Y_mod"
    ]
   },
   {
@@ -459,7 +496,7 @@
     }
    },
    "source": [
-    "#### 5.1 First we isolate the extension in which we are interested"
+    "#### 5.1 We isolate the extension in which we are interested"
    ]
   },
   {
@@ -477,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -485,7 +522,7 @@
    },
    "outputs": [],
    "source": [
-    "indicator = None"
+    "indicator = \"\""
    ]
   },
   {
@@ -499,7 +536,9 @@
    "outputs": [],
    "source": [
     "# the intensity vector in which we are interested\n",
-    "f_ = None"
+    "f_ =  None\n",
+    "\n",
+    "f_"
    ]
   },
   {
@@ -512,7 +551,7 @@
    },
    "outputs": [],
    "source": [
-    "# the final demand GHG emissions\n",
+    "# the final demand CO2 emissions\n",
     "\n",
     "e_hh_ = None"
    ]
@@ -539,8 +578,8 @@
    "outputs": [],
    "source": [
     "# Calculate the total global footprint\n",
-    "e_total = None\n",
-    "e_total"
+    "e_total_reg = None\n",
+    "e_total_reg"
    ]
   },
   {
@@ -576,36 +615,7 @@
    "outputs": [],
    "source": [
     "# In this case we diagonalize the emission intensity vector \n",
-    "e_breakdown = None\n",
-    "e_breakdown"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# we apply the sectoral labels\n",
-    "e_breakdown = None\n",
-    "\n",
-    "# we print the results\n",
-    "e_breakdown"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "source": [
-    "We then sum the results by using the groupby and sum methods in combination in the following manner"
+    "e_breakdown = None"
    ]
   },
   {
@@ -618,10 +628,51 @@
    },
    "outputs": [],
    "source": [
-    "# we sum the results by regions\n",
-    "e_regional_breakdown = None\n",
+    "# we apply the sectoral labels\n",
+    "e_breakdown.index = None\n",
     "\n",
-    "# We sort the results from largest to smallest\n",
+    "e_breakdown"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Right now, we are only interested in the impacts of regions, so so we sum across axis 1\n",
+    "e_prod_reg = None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# and then we sum the results by regions by using the groupby methods\n",
+    "e_regional_breakdown = None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# We sort the results from largest to smallest to see the most impacting regions\n",
     "e_rb_sorted = None\n",
     "\n",
     "e_rb_sorted"
@@ -663,7 +714,13 @@
    },
    "outputs": [],
    "source": [
-    "# plot your results with plot.bar()"
+    "# plot your results with plot.bar()\n",
+    "top_15_results = None\n",
+    "\n",
+    "top_15_plot = None\n",
+    "\n",
+    "# applying bar labels\n",
+    "top_15_plot = None"
    ]
   },
   {
@@ -688,9 +745,24 @@
    "outputs": [],
    "source": [
     "# Normalize your results\n",
-    "e_rb_sorted_norm = None\n",
+    "e_rb_sorted_norm = None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Plot top 15 regions\n",
+    "top_15_norm_plot = None\n",
     "\n",
-    "# Plot top 15 regions\n"
+    "# applying bar labels\n",
+    "top_15_norm_plot = None"
    ]
   }
  ],
@@ -711,7 +783,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.2"
+   "version": "3.9.16"
   },
   "vscode": {
    "interpreter": {
