--- a/MRIO_seminal_works/MRIO_seminal_works_sv.ipynb
+++ b/MRIO_seminal_works/MRIO_seminal_works_sv.ipynb
@@ -18,7 +18,9 @@
     "### Exercise 1\n",
     "Hertwich and Peters (2009) developed an analysis of the carbon footprint of multiple countries in 2001. Their results show the carbon footprint of different final demand categories per product.\n",
     "\n",
-    "In this exercise you will reproduce these results using EXIOBASE and compare any changes between 2001 and 2011"
+    "In this exercise you will reproduce these results using EXIOBASE product by product Input-Output tables and compare any changes between 2001 and 2011\n",
+    "\n",
+    "N.b. in this and future exercises we sometimes refer to general dataframes as df"
    ]
   },
   {
@@ -105,7 +107,7 @@
    "metadata": {},
    "source": [
     "### Calculate environmental intensity matrix\n",
-    "From satellite matrix (F), select row for CO2 (i.e., F_co2). This can be done using pd.loc"
+    "From satellite matrix (F), select row for CO2 (i.e., F_co2). This can be done using df.loc"
    ]
   },
   {
@@ -321,9 +323,9 @@
    "source": [
     "## Re-group dataframe and add labels\n",
     "\n",
-    "df_new = None\n",
-    "df_new.index = ['Households', 'Goverment', 'Investment']\n",
-    "df_new.columns = ['Agriculture and Mining', 'Manufacturing', 'Construction', 'Services']"
+    "results = None\n",
+    "results.index = ['Households', 'Goverment', 'Investment']\n",
+    "results.columns = ['Agriculture and Mining', 'Manufacturing', 'Construction', 'Services']"
    ]
   },
   {
@@ -334,7 +336,7 @@
     "Create a bar graph showing the final contribution per product category to the CO2 footprint\n",
     "\n",
     "Note: This can be done by using:\n",
-    "df_new.plot.barh(stacked=True)"
+    "results.plot.barh(stacked=True)"
    ]
   },
   {
