--- a/carbon_based_accounting/carbon_based_accounting_sv.ipynb
+++ b/carbon_based_accounting/carbon_based_accounting_sv.ipynb
@@ -108,7 +108,7 @@
     "x = Z.sum(1) + Y.sum(1)\n",
     "f = F/x\n",
     "A = Z/x\n",
-    "I = np.eye(A.shape[0])\n",
+    "I = np.identity(A.shape[0])\n",
     "L = np.linalg.inv(I - A)"
    ]
   },
@@ -145,7 +145,7 @@
    "outputs": [],
    "source": [
     "# output multiplier\n",
-    "x_mult = None\n",
+    "x_mult = L @ Y\n",
     "x_mult"
    ]
   },
@@ -160,9 +160,18 @@
    "outputs": [],
    "source": [
     "# remove domestic trasactions (the diagonals)\n",
-    "ex_mult = None\n",
+    "ex_mult = x_mult.copy()\n",
     "\n",
-    "# Add here your expression to convert all domestic values into 0"
+    "no_regions = 3  # number of regions\n",
+    "no_sectors = 4  # number of sectors\n",
+    "\n",
+    "for i in range(no_regions):\n",
+    "    row_start = None\n",
+    "    row_end = None\n",
+    "\n",
+    "    ex_mult[ row_start : row_end , i] = 0           \n",
+    "\n",
+    "ex_mult"
    ]
   },
   {
@@ -176,7 +185,7 @@
    "outputs": [],
    "source": [
     "# The total product output for only export \n",
-    "ex = None\n",
+    "ex = ex_mult.sum(1)\n",
     "ex"
    ]
   },
@@ -201,7 +210,18 @@
    },
    "outputs": [],
    "source": [
-    "# Export-related emissions\n",
+    "# Export-related emissions (use np.diag(f)@ x_mult)\n",
+    "F_ex = None\n",
+    "F_ex"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Vector of export related emissions (direct emissions PBA sum=1)\n",
     "F_ex = None\n",
     "F_ex"
    ]
@@ -227,9 +247,10 @@
    },
    "outputs": [],
    "source": [
-    "# Split the ex and F into 3 arrays, one for each region \n",
+    "# Split the ex and F into 3 arrays, one for each region (use np.split)\n",
     "sect_ex = None\n",
-    "sect_F_ex = None"
+    "sect_F_ex = None\n",
+    "sect_ex, sect_F_ex"
    ]
   },
   {
@@ -244,7 +265,8 @@
    "source": [
     "# Sum them over axis 0, in this way you have the total global ex and F_ex by sector\n",
     "sect_ex_sum = None\n",
-    "sect_F_ex_sum = None"
+    "sect_F_ex_sum = None\n",
+    "sect_ex_sum, sect_F_ex_sum"
    ]
   },
   {
@@ -339,8 +361,8 @@
    "outputs": [],
    "source": [
     "# calculate the different between the total emissions due to exports from the technolgy adjusted ones \n",
-    "delta_ex = None\n",
-    "delta_ex"
+    "diff_ex = None\n",
+    "diff_ex"
    ]
   },
   {
@@ -354,8 +376,8 @@
    "outputs": [],
    "source": [
     "# We aggregate this difference regionally\n",
-    "delta_ex_r = None\n",
-    "delta_ex_r"
+    "diff_ex_r = None\n",
+    "diff_ex_r"
    ]
   },
   {
@@ -368,7 +390,7 @@
    },
    "outputs": [],
    "source": [
-    "# Calculate the TCBA\n",
+    "# Calculate the TCBA by summing the difference to the CBA\n",
     "TCBA = None\n",
     "TCBA"
    ]
@@ -394,6 +416,7 @@
    },
    "outputs": [],
    "source": [
+    "# Concatenate results to be visualized\n",
     "results = np.concatenate([[CBA], [TCBA]])\n",
     "results"
    ]
@@ -462,6 +485,7 @@
     "# Import exiobase\n",
     "path = 'data/IOT_2019_pxp/'    # add name of folder where data is stored                                \n",
     "A = pd.read_csv(f'{path}A.txt', sep='\\t', index_col=[0, 1], header=[0, 1])  # A matrix\n",
+    "Z = pd.read_csv(f'{path}Z.txt', sep='\\t', index_col=[0, 1], header=[0, 1])  # Z matrix\n",
     "Y = pd.read_csv(f'{path}Y.txt', sep='\\t', index_col=[0, 1], header=[0, 1])  # Y matrix\n",
     "F = pd.read_csv(f'{path}satellite/F.txt', sep='\\t', index_col=[0], header=[0, 1])  # satellite matrix\n",
     "F_hh = pd.read_csv(f'{path}satellite/F_Y.txt', sep='\\t', index_col=[0], header=[0, 1])  # satellite for FD matrix"
@@ -477,13 +501,18 @@
    },
    "outputs": [],
    "source": [
+    "\n",
     "# calculate the Leontief inverse\n",
     "I = np.identity(A.shape[0])\n",
     "L = np.linalg.inv(I - A)\n",
     "\n",
     "# Calculate total output vector (x)\n",
     "y_total = Y.sum(1)\n",
-    "x = L @ y_total"
+    "x = L @ y_total\n",
+    "\n",
+    "# No regions and no sector\n",
+    "no_regions = 49\n",
+    "no_sectors = 200"
    ]
   },
   {
@@ -514,7 +543,7 @@
     "x_inv = x.copy() \n",
     "\n",
     "# we divide 1 by the values that are non-0\n",
-    "x_inv[x_inv!=0] = 1/x_inv[x_inv!=0]\n"
+    "x_inv[x_inv!=0] = 1/x_inv[x_inv!=0]"
    ]
   },
   {
@@ -555,19 +584,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "F_CO2_ind = None"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
@@ -591,10 +607,11 @@
     "ipcc_data = \"data/IPCCsec.xlsx\"\n",
     "\n",
     "# import the xio2detail data\n",
-    "IPCCagg = pd.read_excel(ipcc_data, \"xio2detail\", header=0, usecols=\"A:H\")\n",
-    "IPCCagg = IPCCagg.set_index(\"B2:H201\")  # Set the first column as the index.\n",
-    "IPCCagg = IPCCagg.rename_axis(None, axis=0)  # Remove the 'B2:H201' name, this is only used for MATLAB code.\n",
-    "IPCCagg = IPCCagg.fillna(0)  # Change NaN into 0."
+    "IPCCagg = pd.read_excel(ipcc_data, \"xio2detail\", header=0, index_col=0, usecols=\"A:H\")\n",
+    "IPCCagg = IPCCagg.fillna(0)  # Change NaN into 0.\n",
+    "\n",
+    "# This is what the concordancy looks like:\n",
+    "IPCCagg.head()"
    ]
   },
   {
@@ -646,8 +663,10 @@
    },
    "outputs": [],
    "source": [
-    "# use np.reshape to organize your array in a sector by region format\n",
-    "co2_x = None"
+    "# use np.reshape to organize your array in a sector by region format (use np.reshape with order=\"F\")\n",
+    "F_CO2 = None\n",
+    "\n",
+    "F_CO2.shape"
    ]
   },
   {
@@ -692,19 +711,15 @@
    },
    "outputs": [],
    "source": [
-    "# Create the elec array.\n",
-    "no_sectors = None\n",
-    "no_regions = None\n",
+    "first_el_pr_pos = 127 # first electricity product category\n",
+    "last_el_pr_pos = 140  # last electricity product category\n",
     "\n",
-    "first_el_pr_pos = None # first electricity product category\n",
-    "last_el_pr_pos = None  # last electricity product category\n",
-    "\n",
-    "elec = None\n",
+    "elec = np.zeros(A.shape[0])\n",
     "\n",
     "for i in range(no_regions):\n",
     "    start_pos = None\n",
     "    end_pos = None\n",
-    "    elec[start_pos : end_pos] = None"
+    "    elec[start_pos : end_pos] = 1"
    ]
   },
   {
@@ -717,13 +732,15 @@
    },
    "outputs": [],
    "source": [
-    "# Calculate your scope 2 emissions\n",
-    "co2_elec_Z = None\n",
+    "# Calculate the scope 2 emissions \n",
+    "# by performing f×diag(electricity)×Z\n",
     "\n",
-    "# reshapte results according to a sector by region format\n",
-    "co2_elec_z = None\n",
+    "co2_scope2 = None\n",
     "\n",
-    "# Aggregating sectors/products by the macro-categories using the concordancy matrix \n",
+    "# Reshape\n",
+    "co2_scope2 = None\n",
+    "\n",
+    "# Aggregate sectors/products by the macro-categories using the concordancy matrix\n",
     "co2_scope2 = None\n",
     "\n",
     "# adding regional labels\n",
@@ -755,8 +772,15 @@
    },
    "outputs": [],
    "source": [
-    "# Calculate your scope 3 emissions\n",
-    "co2_ind_shaped = None\n",
+    "# Calculate scope 2 emissions by peforming \n",
+    "# f×L×Z - f×diag(Elec)×Z \n",
+    "\n",
+    "co2_scope3 = None\n",
+    "\n",
+    "# Reshape\n",
+    "co2_scope3 = None\n",
+    "\n",
+    "# Aggregate sectors/products by the macro-categories using the concordancy matrix\n",
     "co2_scope3 = None\n",
     "\n",
     "# adding regional labels\n",
