--- a/IOT_n_national_accounts/IOT_n_national.ipynb
+++ b/IOT_n_national_accounts/IOT_n_national.ipynb
@@ -653,7 +653,88 @@
    },
    "outputs": [],
    "source": [
-    "IO_GDP_approaches_results = {\"income\": None, \"expenditure\": None}"
+    "IO_GDP_approaches_results = {\"production\": None, \"income\": None, \"expenditure\": None}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "f30c17da-c367-4094-9b51-86ad2756dee9",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "762564.0"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Production perspective\n",
+    "\n",
+    "production_items = [\"Other taxes on production\", \n",
+    "                    \"Other subsidies on production (–)\",\n",
+    "                    \"Wages and salaries\", \n",
+    "                    \"Employers' social contributions\", \n",
+    "                    \"Operating surplus (gross)\"]\n",
+    "\n",
+    "prod_approach_breakdown = IO_2021_cp.loc[production_items, :\"Goods and services n.e.c.\"]\n",
+    "IO_GDP_approaches_results[\"production\"] = prod_approach_breakdown.values.sum()\n",
+    "IO_GDP_approaches_results[\"production\"]\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "324fa8c8",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "**But wait! What is the value that we obtained from Eurostat and that we see in the macro economic totals documentation of CBS?**\n",
+    "\n",
+    "\n",
+    "We need to add taxes and subtract subsidies to obtain GDP"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "96dae8ff",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "856356.0"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# From value added at basic price to actual GDP\n",
+    "taxes_less_subsidies_items = [\"Import duties\", \"Other taxes on imports\", \"Taxes on domestic products\", \"Import subsidies (–)\",\"Subsidies on domestic products (–)\"]\n",
+    "\n",
+    "taxes_less_subsidies = IO_2021_cp.loc[taxes_less_subsidies_items, \"Total (1–81)\":\"Trade and transport margins\"]\n",
+    "\n",
+    "IO_GDP_approaches_results[\"production\"] = IO_GDP_approaches_results[\"production\"] + taxes_less_subsidies.values.sum()\n",
+    "IO_GDP_approaches_results[\"production\"]"
    ]
   },
   {
@@ -804,7 +885,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.11.9"
   },
   "vscode": {
    "interpreter": {
