--- a/IOT_n_national_accounts/IOT_n_national_sv.ipynb
+++ b/IOT_n_national_accounts/IOT_n_national_sv.ipynb
@@ -368,57 +368,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "IO_GDP_approaches_results = {\"production\": None, \"income\": None, \"expenditure\": None}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f30c17da-c367-4094-9b51-86ad2756dee9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Production perspective\n",
-    "\n",
-    "production_items = None\n",
-    "\n",
-    "prod_approach_breakdown = None\n",
-    "\n",
-    "IO_GDP_approaches_results[\"production\"] = prod_approach_breakdown.values.sum()\n",
-    "IO_GDP_approaches_results[\"production\"]\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "324fa8c8",
-   "metadata": {},
-   "source": [
-    "**But wait! What is the value that we obtained from Eurostat and that we see in the macro economic totals documentation of CBS?**"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "86140cd0",
-   "metadata": {},
-   "source": [
-    "In the CBS IOTs, value added is reported at basic price. We need to add taxes and subtract subsidies to obtain the actual GDP"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "96dae8ff",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# From value added at basic price to actual GDP\n",
-    "taxes_less_subsidies_items = None\n",
-    "\n",
-    "taxes_less_subsidies = None\n",
-    "\n",
-    "# Add taxes less subsidies\n",
-    "IO_GDP_approaches_results[\"production\"] = None\n",
-    "IO_GDP_approaches_results[\"production\"]"
+    "IO_GDP_approaches_results = {\"income\": None, \"expenditure\": None}"
    ]
   },
   {
