updated table in the student version of supply chain linkages lecture

--- a/supply_chain_linkages/supply_chain_linkages_sv.ipynb
+++ b/supply_chain_linkages/supply_chain_linkages_sv.ipynb
@@ -887,7 +887,33 @@
    "source": [
     "#### 2.4 Using the normalized results and the figure below, what can you tell about this IO system?\n",
     "\n",
-    "![image](figures/linkages.PNG)"
+    "<table style=\"text-align:center;\" cellspacing=\"0\" width=\"855\">\n",
+    "  <tbody>\n",
+    "    <tr height=\"20\">\n",
+    "      <th colspan=\"2\" rowspan=\"2\"></th>\n",
+    "      <th colspan=\"2\">Direct or Total Forward Linkage</th>\n",
+    "    <tr height=\"20\">\n",
+    "      <td >Low (&lt;1)</td>\n",
+    "      <td >High ( &gt;1)</td>\n",
+    "    </tr>\n",
+    "    <tr height=\"41\">\n",
+    "      <td rowspan=\"2\" height=\"82\" width=\"100\" style=\"font-weight:bold;\">Direct or Total Backward Linkage</td>\n",
+    "      <td>Low (&lt;1)</td>\n",
+    "      <td >(I) Generally\n",
+    "  independent</td>\n",
+    "      <td>(II) Dependent on\n",
+    "  interindustry demand</td>\n",
+    "    </tr>\n",
+    "    <tr height=\"41\" >\n",
+    "      <td height=\"41\">High (&gt;1)</td>\n",
+    "      <td>(IV) Dependent on interindustry supply</td>\n",
+    "      <td>(III) Generally dependent</td>\n",
+    "    </tr>\n",
+    "  </tbody>\n",
+    "</table>\n",
+    "\n",
+    "\n",
+    "Adapted from Table 12.3, Miller and Blair (2009), Input–Output Analysis Foundations and Extensions (Second Edition).\n"
    ]
   },
   {
