--- a/supply_n_use_tables/supply_n_use_tables.ipynb
+++ b/supply_n_use_tables/supply_n_use_tables.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -50,7 +50,391 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 7</th>\n",
+       "      <th>Unnamed: 8</th>\n",
+       "      <th>Unnamed: 9</th>\n",
+       "      <th>Unnamed: 10</th>\n",
+       "      <th>Unnamed: 11</th>\n",
+       "      <th>Unnamed: 12</th>\n",
+       "      <th>Unnamed: 13</th>\n",
+       "      <th>Unnamed: 14</th>\n",
+       "      <th>Unnamed: 15</th>\n",
+       "      <th>Unnamed: 16</th>\n",
+       "      <th>...</th>\n",
+       "      <th>Unnamed: 67</th>\n",
+       "      <th>Unnamed: 68</th>\n",
+       "      <th>Unnamed: 69</th>\n",
+       "      <th>Unnamed: 70</th>\n",
+       "      <th>Unnamed: 71</th>\n",
+       "      <th>Unnamed: 72</th>\n",
+       "      <th>Unnamed: 73</th>\n",
+       "      <th>Unnamed: 74</th>\n",
+       "      <th>Unnamed: 75</th>\n",
+       "      <th>Unnamed: 76</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>5847.714</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2918.461</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1882.033</td>\n",
+       "      <td>355.052</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>0</td>\n",
+       "      <td>2405.276</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>750.908</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>545.606</td>\n",
+       "      <td>46.059</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>70.463</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>89.369</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>65.562</td>\n",
+       "      <td>11.805</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>4.201</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1605.76</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>6482.475</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>685.564</td>\n",
+       "      <td>92.611</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>643.989</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>51.188</td>\n",
+       "      <td>19697.762</td>\n",
+       "      <td>2.121</td>\n",
+       "      <td>0.882</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.024</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>8471.026</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>9018.104</td>\n",
+       "      <td>4764.158</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>71</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>3560.643</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>72</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.948</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>279.148</td>\n",
+       "      <td>1.615</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>21.187</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>75.554</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>73</th>\n",
+       "      <td>0.853</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.175</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2952.335</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>50.611</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>419.279</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>74</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>175.829</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>65 rows × 70 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Unnamed: 7 Unnamed: 8 Unnamed: 9 Unnamed: 10 Unnamed: 11 Unnamed: 12  \\\n",
+       "11   5847.714          0          0           0           0           0   \n",
+       "12          0   2405.276          0           0           0           0   \n",
+       "13          0          0     70.463           0           0           0   \n",
+       "14      4.201          0          0     1605.76           0           0   \n",
+       "15    643.989          0          0      51.188   19697.762       2.121   \n",
+       "..        ...        ...        ...         ...         ...         ...   \n",
+       "71          0          0          0           0           0           0   \n",
+       "72          0          0          0           0           0           0   \n",
+       "73      0.853          0          0           0           0           0   \n",
+       "74          0          0          0           0           0           0   \n",
+       "75          0          0          0           0           0           0   \n",
+       "\n",
+       "   Unnamed: 13 Unnamed: 14 Unnamed: 15 Unnamed: 16  ... Unnamed: 67  \\\n",
+       "11           0           0           0           0  ...           0   \n",
+       "12           0           0           0           0  ...           0   \n",
+       "13           0           0           0           0  ...           0   \n",
+       "14           0           0           0           0  ...           0   \n",
+       "15       0.882           0           0           0  ...         3.5   \n",
+       "..         ...         ...         ...         ...  ...         ...   \n",
+       "71           0           0           0           0  ...    3560.643   \n",
+       "72       1.948           0           0           0  ...           0   \n",
+       "73           0           0           0           0  ...       1.175   \n",
+       "74           0           0           0           0  ...           0   \n",
+       "75           0           0           0           0  ...           0   \n",
+       "\n",
+       "   Unnamed: 68 Unnamed: 69 Unnamed: 70 Unnamed: 71 Unnamed: 72 Unnamed: 73  \\\n",
+       "11           0           0           0           0    2918.461         NaN   \n",
+       "12           0           0           0           0     750.908         NaN   \n",
+       "13           0           0           0           0      89.369         NaN   \n",
+       "14           0           0           0           0    6482.475         NaN   \n",
+       "15           0       0.024           0           0    8471.026         NaN   \n",
+       "..         ...         ...         ...         ...         ...         ...   \n",
+       "71           0           0           0           0           0         NaN   \n",
+       "72     279.148       1.615           0           0      21.187         NaN   \n",
+       "73           0    2952.335           0           0      50.611         NaN   \n",
+       "74           0           0     175.829           0           0         NaN   \n",
+       "75           0           0           0           0           0         NaN   \n",
+       "\n",
+       "   Unnamed: 74 Unnamed: 75 Unnamed: 76  \n",
+       "11         NaN    1882.033     355.052  \n",
+       "12         NaN     545.606      46.059  \n",
+       "13         NaN      65.562      11.805  \n",
+       "14         NaN     685.564      92.611  \n",
+       "15         NaN    9018.104    4764.158  \n",
+       "..         ...         ...         ...  \n",
+       "71         NaN           0           0  \n",
+       "72         NaN           0      75.554  \n",
+       "73         NaN           0     419.279  \n",
+       "74         NaN           0           0  \n",
+       "75         NaN           0           0  \n",
+       "\n",
+       "[65 rows x 70 columns]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "supply_.iloc[11:,7:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -591,6 +975,13 @@
     "# Print results\n",
     "print(f\"{industries[0]}:\\n\\n{i_1_supply}\\n\\n{industries[1]}:\\n\\n{i_2_supply}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -610,7 +1001,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.11.9"
   },
   "vscode": {
    "interpreter": {
